fixed form on mobile

--- a/public/style.scss
+++ b/public/style.scss
@@ -791,7 +791,9 @@ label {
 	.couple-container {
 		flex-direction: column;
 	}
-
+  .form-container {
+    left: 0%;
+  }
 	// .couple-subtext {
 	// 	padding: 0.1em;
 	// }
